--- a/Shopify App/Modules/category/View/GridProductCell/GridProductCollectionViewCell.xib
+++ b/Shopify App/Modules/category/View/GridProductCell/GridProductCollectionViewCell.xib
@@ -74,6 +74,9 @@
                                 </constraints>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" image="favoriteRed"/>
+                                <connections>
+                                    <action selector="addToWishList:" destination="gTV-IL-0wX" eventType="touchUpInside" id="Akb-bB-v39"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
